# FAQAssist

./: .gitignore  README.md  build_vector_store.py  main.py  pyproject.toml  requirements.txt  streamlit_main.py  thread_id.txt
ai/data/: create_dataset.py
ai/data/chroma_db/: chroma.sqlite3
ai/rag/: chunker.py  get_embeddings_model.py  loader.py  retriever.py  run_retriever.py  test.py
ai/react_agent/: agent.py  prompts.py  tools.py
